--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Book LIst</h1>
+<h1>Book List</h1>
 
 <table>
     <tr>
@@ -15,9 +15,9 @@
         <th>Publisher</th>
     </tr>
     <tr th:each="book : ${books}">
-        <td th:text="${book.id}">123</td>
-        <td th:text="${book.title}">Spring in action</td>
-        <td th:text="${book.publisher.name}">Wrox</td>
+        <td th:text="${book.id}"></td>
+        <td th:text="${book.title}"></td>
+        <td th:text="${book.publisher.name}"></td>
     </tr>
 </table>
 </body>
